<resources>
    <string name="app_name">SudokuSolver</string>
    <string name="main_cell_text_view_default_value">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="notes_button_text">Notes</string>
    <string name="undo_button_text">Undo</string>
    <string name="redo_button_text">Redo</string>
    <string name="delete_button_text">Delete</string>
</resources>