<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainFragment">

    <TableLayout
        android:id="@+id/sudoku_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/main_table_border"
        android:divider="@color/black"
        android:orientation="vertical"
        android:showDividers="middle">

        <include
            android:id="@+id/first_3x9_table_row"
            layout="@layout/sudoku_3x9_table_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <include
            android:id="@+id/second_3x9_table_row"
            layout="@layout/sudoku_3x9_table_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <include
            android:id="@+id/third_3x9_table_row"
            layout="@layout/sudoku_3x9_table_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </TableLayout>

    <TableRow
        android:id="@+id/number_key_pad"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical">

        <Button
            style="@style/key_pad_button_style"
            android:text="@string/number_1" />

        <Button
            style="@style/key_pad_button_style"
            android:text="@string/number_2" />

        <Button
            style="@style/key_pad_button_style"
            android:text="@string/number_3" />

        <Button
            style="@style/key_pad_button_style"
            android:text="@string/number_4" />

        <Button
            style="@style/key_pad_button_style"
            android:text="@string/number_5" />

        <Button
            style="@style/key_pad_button_style"
            android:text="@string/number_6" />

        <Button
            style="@style/key_pad_button_style"
            android:text="@string/number_7" />

        <Button
            style="@style/key_pad_button_style"
            android:text="@string/number_8" />

        <Button
            style="@style/key_pad_button_style"
            android:text="@string/number_9" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/undo_button"
            style="@style/action_button_style"
            android:drawableTop="@drawable/ic_baseline_undo_24"
            android:text="@string/undo_button_text" />

        <Button
            android:id="@+id/redo_button"
            style="@style/action_button_style"
            android:drawableTop="@drawable/ic_baseline_redo_24"
            android:text="@string/redo_button_text" />

        <Button
            android:id="@+id/note_taking_state_button"
            style="@style/action_button_style"
            android:drawableTop="@drawable/ic_baseline_edit_off_24"
            android:text="@string/notes_button_text" />

    </LinearLayout>

</LinearLayout>
